--- a/app/views/admin/activities/index.html.haml
+++ b/app/views/admin/activities/index.html.haml
@@ -34,4 +34,4 @@
 
 .row
   .small-12.columns
-    = link_to 'New Activity', new_activity_path, class: [:button, :tiny]
+    = link_to 'New Activity', new_admin_activity_path, class: [:button, :tiny]
