--- a/app/views/admin/activities/_form.html.haml
+++ b/app/views/admin/activities/_form.html.haml
@@ -16,6 +16,10 @@
     .small-12.large-8.columns= f.input :start_at, as: :string, input_html: {:required => '', class: :fdatepicker}
   .row
     .small-12.large-8.columns= f.input :end_at, as: :string, input_html: {class: :fdatepicker}
+  = f.input :responsible_organisation_ids, collection: Partner.all,  input_html: {class: :chosen_select}, multiple: true
+  / = f.fields_for :responsible_organisations do |ff|
+  /   .row
+  /     .small-12.large-8.columns= f.input
   .row
     .small-12.large-7.columns
       = f.fields_for :photos do |ff|
@@ -30,3 +34,4 @@
   :plain  
     $('.fdatepicker').fdatepicker({format: 'yyyy-mm-dd'});
 
+    $('.chosen_select').chosen();
