--- a/app/views/admin/activities/_form.html.haml
+++ b/app/views/admin/activities/_form.html.haml
@@ -16,7 +16,8 @@
     .small-12.large-8.columns= f.input :start_at, as: :string, input_html: {:required => '', class: :fdatepicker}
   .row
     .small-12.large-8.columns= f.input :end_at, as: :string, input_html: {class: :fdatepicker}
-  = f.input :responsible_organisation_ids, collection: Partner.all,  input_html: {class: :chosen_select}, multiple: true
+  .row
+    .small-12.large-8.columns= f.input :responsible_organisation_ids, collection: Partner.all,  input_html: {class: :chosen_select}, multiple: true, label: 'Responsible organisations'
   / = f.fields_for :responsible_organisations do |ff|
   /   .row
   /     .small-12.large-8.columns= f.input
