--- a/app/views/admin/activities/index.html.haml
+++ b/app/views/admin/activities/index.html.haml
@@ -2,6 +2,7 @@
   .small-12.columns
     %h1 Activities
 
+    %p= link_to "Edit activity types", admin_activitytypes_path, class: [:button, :secondary, :small]
     %table
       %thead
         %tr
