--- a/app/views/admin/activities/_form.html.haml
+++ b/app/views/admin/activities/_form.html.haml
@@ -9,7 +9,7 @@
   .row
     .small-12.large-8.columns= f.input :name, input_html: {:required => ''}
   .row
-    .small-12.large-8.columns= f.input :activity_type, input_html: {:required => ''}
+    .small-12.large-8.columns= f.input :activitytype, input_html: {:required => ''}
   .row
     .small-12.columns= f.input :description, as: :text, input_html: {class: :ckeditor}
   .row
