--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -182,9 +182,13 @@ header {
 
 footer {
   font-size: 0.9rem;
+  .row {
+    max-width: initial;
+  }
   .drawer {
     background-color: #fad1cb;
     padding: 1.5rem 0;
+    margin-bottom: -2px;
     a {
       color: #222;
     }
