--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,9 +1,11 @@
 %footer
-  .row.drawer
-    .text-center
-      = link_to 'Supporters and partners', '#', onclick: "javascript:$('footer .rest').slideToggle();return false;"
-  .row.arrow
-    .text-center.down_arrow= link_to image_tag('selected_down.png'), '#', onclick: "javascript:$('footer .rest').slideToggle();return false;"
+  .drawer
+    .row
+      .text-center
+        = link_to 'Supporters and partners', '#', onclick: "javascript:$('footer .rest').slideToggle();return false;"
+  .arrow
+    .row
+      .text-center.down_arrow= link_to image_tag('selected_down.png'), '#', onclick: "javascript:$('footer .rest').slideToggle();return false;"
   .rest
     .row.lined
       .text-center Nordic Cultural Event of the Year
