--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -120,7 +120,7 @@
           .title_box.text-center{style: "padding: #{3.25 - @sticky.size }rem 0;"}
             .title= post.title
             .date= post.published_at.strftime("%d %b %Y")
-          .blurb{style: "padding: #{2.75 - @sticky.size }rem 0;"}
+          .text-center.blurb{style: "padding: #{3.25 - @sticky.size }rem 0;"}
             = post.short_abstract.blank? ? truncate_html(strip_tags(post.body), length: 120) : post.short_abstract
             = link_to '>>>', post
       = content_for :jquery do
