--- a/app/views/activities/index.html.haml
+++ b/app/views/activities/index.html.haml
@@ -90,14 +90,14 @@
       });
 
 #activity_map_wrapper
-  .vertical-line
+  %table.vertical-line
     - @activities.each do |activity|
-      .activity_row{class: "activitytype_#{activity.activitytype.id}"}
-        .circle.text-center
+      %tr.activity_row{class: "activitytype_#{activity.activitytype.id}"}
+        %td.circle.text-center
           = activity.box_date
       
-        .activity_entry
-          .arrow_left{style: "border-right: 20px solid ##{activity.box_colour};"} &nbsp;
+        %td.activity_entry
+          .arrow_left{style: "background: url(/assets/arrows/#{activity.box_colour}.png) center center no-repeat"}
           .activity_box{style: "background-color: ##{activity.box_colour};"}
             .title.text-center= activity.name
             .dates.text-center
