--- a/app/assets/stylesheets/activities.css.scss
+++ b/app/assets/stylesheets/activities.css.scss
@@ -246,7 +246,7 @@ nav.activities-bar {
       .activity_description {
         margin-top: 0.5rem;
         font-size: 0.750rem;
-        color: #222;
+        color: #FFF;
       }
       &.fee100, &.FB8828 {
         .title, .dates, .activity_description { 
