--- a/app/views/activities/index.html.haml
+++ b/app/views/activities/index.html.haml
@@ -97,7 +97,7 @@
           = activity.box_date
       
         %td.activity_entry
-          .arrow_left{style: "background: url(/assets/arrows/#{activity.box_colour}.png) center center no-repeat"}
+          .arrow_left{style: "background: url(#{image_path('arrows/' + activity.box_colour + '.png')}) center center no-repeat"}
           .activity_box{style: "background-color: ##{activity.box_colour};", class: activity.box_colour}
             .title.text-center= activity.name
             .dates.text-center
