--- a/app/views/admin/activitytypes/index.html.haml
+++ b/app/views/admin/activitytypes/index.html.haml
@@ -1,7 +1,9 @@
 .row
   .small-12.columns
-    %h1 Listing activity types
-
+    %h1 activity types
+    
+    %p Drag-and-drop to re-order how they will appear on menus/filters
+    
     %table
       %thead
         %tr
@@ -11,8 +13,8 @@
       
       %tbody
         - @activitytypes.each do |pc|
-          %tr
-            %td= pc.name
+          %tr[pc]
+            %td.item= pc.name
             %td
               = link_to 'Edit', edit_admin_activitytype_path(pc), class: [:button, :small]
               = link_to 'Destroy', [:admin, pc], :method => :delete, :data => { :confirm => 'Are you sure?' }, class: [:button, :small, :alert]
@@ -20,3 +22,25 @@
     %br
 
     = link_to 'New activity type', new_admin_activitytype_path, class: [:button, :small]
+
+= content_for :jquery do
+  :plain
+    $('tbody').sortable({
+      axis: 'y',
+      dropOnEmpty: false,
+      cursor: 'crosshair',
+      items: 'tr',
+      opacity: 0.4,
+      scroll: true,
+      update: function() {
+        $.ajax({
+          url: '/admin/activitytypes/sort',
+          type: 'post',
+          data: $('tbody').sortable('serialize'),
+          dataType: 'script',
+          complete: function(request){
+            $('tbody tr').effect('highlight');
+          }
+        }) 
+      }
+      });
