--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -25,6 +25,7 @@
         = image_tag('eu.png')
         = image_tag('cw.png')
         = image_tag('op.png')
+        = image_tag('austrian.jpg')
   .row.contact_info
     .row
       .small-12.columns.text-center
