--- a/app/views/groups/index.html.haml
+++ b/app/views/groups/index.html.haml
@@ -1,19 +1,25 @@
+
+
 - @groups.each_with_index do |group,index|
   .row.group_container{class: @groups[index+1].nil? ? :last : false}
-    .columns.medium-offset-2.medium-8.small-12
+    - if index == 0
+      .medium-3.columns.right
+        .magellan-scrollnav
+          %div{:"data-magellan-expedition" => :fixed, :"data-options" => "threshold:100;destination_threshold:120;fixed_top:320" }
+            %dl.sub-nav.groups_list
+              - @groups.each_with_index do |g, count|
+                %li= link_to (count + 1).to_s + ". " + g.name, '#', onclick: "scrollTo('a[name=#{g.id}]');return false;"
+    .columns.medium-offset-2.small-12{class: index == 0 ? "medium-7" : "medium-8"}
       %a{name: group.id }
-      %h2= group.name
+      %h2= link_to group.name, group
       %p
         %em Hosts:
         = group.host
       %p
-        %em Place:
-        = group.place
+        %em Participants:
+        = group.participants.not_hosts.map(&:name).join(', ')
       .short_description
         = raw group.short_description
         = link_to ">>>", group
     - if index == 0
       .medium-2.columns.navigator
-        %ol.groups_list
-          - @groups.each do |g|
-            %li= link_to g.name, '#', onclick: "scrollTo('a[name=#{g.id}]');return false;"
