--- a/app/views/participants/index.html.haml
+++ b/app/views/participants/index.html.haml
@@ -1,4 +1,4 @@
-.participants_container
+.participants_index_container
   - @participants.each_with_index do |participant, index|
     .participant{class: index == (@participants.size - 1) ? :last : false}
       .row
