--- a/app/assets/stylesheets/field_notes.css.scss
+++ b/app/assets/stylesheets/field_notes.css.scss
@@ -120,6 +120,8 @@ nav.top-bar {
 
 .participants_container {
   border-top: 2px solid black;
+}
+.participants_container, .participants_index_container {
   .host_container, .participant_container, .participant {
     padding: 2.5rem 0;
     border-bottom: 2px solid black;
@@ -154,11 +156,11 @@ nav.top-bar {
     }
     .participant_name {
       font-size: 1.6rem;
-      margin-bottom: 1.5rem;
+      margin-bottom: 0.6rem;
       line-height: 1.8rem;
       color: #444;
     }
-    .bio, .bio p {
+    .bio, .bio p, .participant_bio, .participant_bio p {
       color: #444;
       font-size: 0.9rem;
       line-height: 1.4rem;
